[project]
name = "medical-triage-openenv"
version = "1.0.0"
description = "Medical Triage OpenEnv environment for AI agents"
authors = [{ name = "Aditi" }]
requires-python = ">=3.10"

dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.9.2",
    "openai==1.51.0",
    "httpx==0.27.2",
    "python-multipart==0.0.12"
]

[tool.setuptools]
packages = ["app"]