[project]
name = "medical-triage-openenv"
version = "1.0.0"
description = "Medical Triage OpenEnv environment"
authors = [{ name = "Aditi" }]
requires-python = ">=3.10,<3.12"

dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.9.2",
    "openai>=2.7.2",
    "httpx==0.27.2",
    "python-multipart==0.0.12",
    "openenv-core>=0.2.0"
]

#  REQUIRED by OpenEnv
[project.scripts]
server = "server.app:app"

[tool.setuptools]
packages = ["app", "server"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"